welcome.lessons.welcome.instructions.Instructions.scala.code
def dessiner
	{baissBrosse; leveBrosse;}



for (i <- 0 to 4)
{dessiner; avance(); dessiner; avance(); droite();}
avance()
droite()
avance()
gauche()